# rand-float-rs

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: uniform01.rs
examples/: crosscheck.rs  gaussian_tail.rs
python/: plot_bench.py
src/: badizadegan.rs  campbell.rs  lib.rs  pekkizen.rs  perfect.rs  sources.rs  standard.rs  uniform.rs
tests/: bench_contenders.rs
